--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -23,16 +23,25 @@ Changes:	Each Vega card is now reset individually. This should work better for
 Version: 3.1f
 Release Date: 2017-12-03
 Changes:	Verifies Miner EXE exists right after elevation now.
-		Added version to logging so I can tell what version you are complaining about.
-		In situations where the monitor has to stop (FATAL Errors) you now must
-		have the monitor window in focus and press F12. Before if you hit any key from any app
-		it would respond and close.
-		Monitor window is now brought to the foreground at start and after the Miner is responding.
-		More error checking of data from the miner.
+			Added version to logging so I can tell what version you are complaining about.
+			In situations where the monitor has to stop (FATAL Errors) you now must
+			have the monitor window in focus and press F12. Before if you hit any key from any app
+			it would respond and close.
+			Monitor window is now brought to the foreground at start and after the Miner is responding.
+			More error checking of data from the miner.
 
 Version: 3.2
 Release Date: 2017-12-06
 Changes:	Added SMS notifications via Gmail
-		Added notifications via Slack WebHooks
-		Added donations reminder
+			Added notifications via Slack WebHooks
+			Added donations reminder
+			
+Version: 3.5.1
+Relese Date: 2017-12-13
+Changes:	Settings moved out of script and into JJs_HashMonitor_Config.txt
+			Use of UAC made optional by setting the useUAC variable (default is TRUE)
+			Option to flush the DNS cache on startup (default is TRUE)
+			Environment variable XMRSTAK_NOWAIT is set to 1 by default (To disable the dialog "Press any key".)
+			Minimum hash rate. If this threshold is not met the monitor and miner will restart. (default is not set)
+			Bug fixes (possible divide by zero - Thanks c04x)
 			
